k8s/visit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: visit
          image: grinman/multi-visit
          ports:
            - containerPort: 8080
