k8s/visit-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visit-cluster-ip-service
spec:
  type: ClusterIP
  selector:
      component: web
  ports:
    - port: 8080
      targetPort: 8080
